# ITMO

./: .gitignore  README.md
2 sem/Lab1/: main.cpp
2 sem/Lab2/: main.cpp
2 sem/Lab3/: CMakeLists.txt  data.xml  main.cpp
Algorithms/: README.md
Digital-Culture/Lab2/: .._M3110.docx.icloud  ..__M3110.pdf.icloud  .gitignore  .image.jpg.icloud
Digital-Culture/Lab4/: output.txt  script.py
Digital-Culture/Lab5/: graphedges133.txt  graphtask133.txt  script.py
Lab1/A/: A.py
Lab1/B/: B.py
Lab10/A/: main.cpp
Lab10/B/: main.cpp
Lab11/B/: CMakeLists.txt  main.cpp
Lab11/C/: CMakeLists.txt
Lab11/D/: CMakeLists.txt  main.cpp
Lab2/: script.py
Lab2/B/: B.cpp  race.in
Lab2/C/: CMakeLists.txt
Lab2/E/: CMakeLists.txt
Lab3/B/: main.cpp
Lab3/D/: main.cpp
Lab4/: brain101_edit.txt  output.txt  script.py
Lab4/A/: CMakeLists.txt
Lab4/B/: CMakeLists.txt
Lab4/C/: CMakeLists.txt
Lab4/D/: PostFix.cpp
Lab4/E/: CMakeLists.txt
Lab5/: output.txt  script.py
Lab5/A/: main.cpp
Lab5/B/: check.out  main.cpp
Lab6/A/: main.cpp
Lab6/B/: main.cpp
Lab6/C/: main.cpp
Lab7/A/: main.cpp
Lab7/B/: 1.cpp  main.cpp  rotation.out
Lab7/D/: deletion.out
Lab8/A/: main.py
Lab8/B/: main.py
Lab8/C/: input.txt  main.py
Lab8/D_C++/: main.cpp
Lab9/B/: main.cpp
Lab9/D/: main.cpp
Lab9/E/: hamiltonian.out  main.cpp
Lab9/F/: F.cpp
OS/lab1/: 1.sh  10.sh  2.sh  3.sh  4.sh  5.sh  6.sh  8.sh  emails.lst
Programming/: README.md
Programming/2 sem/Lab3/: .data-20210322T085457-structure-20190416T084545.xml.icloud  CMakeLists.txt  main.cpp
(+190 files in other folders)
